# woojin

./: .gitignore  Cargo.toml  README.md  README.rst  index.wj  main.wj
.github/: FUNDING.yml
src/: ast.rs  calc.rs  error.rs  lib.rs  main.rs  parser.rs  value.rs  variable.rs
src/token/: mod.rs  tokenizer.rs
src/types/: mod.rs  parse.rs
